# NewJniDemo

GameJni/: settings.gradle
GameJni/app/: build.gradle  readMe.md
GameJni/app/src/androidTest/java/com/game/sdk/: ExampleInstrumentedTest.java
GameJni/app/src/main/: AndroidManifest.xml
GameJni/app/src/main/cpp/: CMakeLists.txt  GameService.cpp  qifengjs-lib.cpp
GameJni/app/src/main/cpp/include/: substrate.h
GameJni/app/src/main/java/: com_game_sdk_jni_QFGame.h
GameJni/app/src/main/java/com/game/sdk/: MainActivity.java
GameJni/app/src/main/res/values/: strings.xml
GameJni/gradle/wrapper/: gradle-wrapper.properties
MyJni/: settings.gradle
MyJni/app/: build.gradle  readMe.md
MyJni/app/src/androidTest/java/com/my/myjni/: ExampleInstrumentedTest.java
MyJni/app/src/main/: AndroidManifest.xml
MyJni/app/src/main/cpp/: CMakeLists.txt  demo-lib.cpp  demo.cpp  demo.h  native-lib.cpp
MyJni/app/src/main/java/com/my/myjni/: MainActivity.java
MyJni/app/src/test/java/com/my/myjni/: ExampleUnitTest.java
MyJni/gradle/wrapper/: gradle-wrapper.properties
TestDemo/: settings.gradle
TestDemo/app/: build.gradle  readMe.md
TestDemo/app/src/androidTest/java/com/game/testdemo/: ExampleInstrumentedTest.java
TestDemo/app/src/main/: AndroidManifest.xml
TestDemo/app/src/main/java/com/game/testdemo/: TestGame.java
TestDemo/app/src/main/res/layout/: layout.xml
TestDemo/ggmage/: build.gradle
TestDemo/ggmage/src/main/java/com/game/sdk/: GGFloatView.java  (+1 more)
TestDemo/ggmage/src/main/res/layout/: gggame.xml
TestDemo/gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
